--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ChangePassword.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ChangePassword.cshtml
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <div class="modal-footer" style="margin-top:40px">
+    <div class="modal-footer">
         <input type="submit" value="Modifica Password" class="btn btn-info" />
         <input type="button" value="Chiudi finestra" onclick="hideModal()" class="btn btn-danger" />
     </div>
