--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <div class="modal-footer" style="margin-top:40px">
+    <div class="modal-footer">
         <button type="submit" class="btn btn-info">Aggiorna</button>
         <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="hideModal()">Chiudi la finestra</button>
 
