--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/Ricerca.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/Ricerca.cshtml
@@ -1,12 +1,10 @@
 ﻿@using Sediin.Core.Mvc.Helpers.TagHelpers
 @addTagHelper *, Sediin.Core.Mvc.Helpers
 
- <ricerca-modulo 
-    header-text="Ricerca Utenti"
-    ricerca-action="/Administrator/Utenti/Ricerca"
-    execute-ricerca-on-ready="true"
-    reset-button="true"
-    partial-html="@await Html.PartialAsync("RicercaModulo", null)"
- >
+<ricerca-modulo header-text="Ricerca Utenti"
+                ricerca-action="@Url.Action("Ricerca", "Utenti")"
+                execute-ricerca-on-ready="true"
+                reset-button="true"
+                partial-html="@await Html.PartialAsync("RicercaModulo", null)">
 
 </ricerca-modulo>
