--- a/Sediin.Core.WebUi/Views/Authentication/Register.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Register.cshtml
@@ -12,7 +12,7 @@
             @Html.ValidationMessageFor(model => model.UserName)
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 form-group">
         </div>
 
         <div class="col-md-6 form-group">
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <div class="modal-footer" style="margin-top:40px">
+    <div class="modal-footer">
         <button type="submit" class="btn btn-info">Registrati</button>
         <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="hideModal()">Chiudi la finestra</button>
     </div>
