--- a/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
@@ -21,7 +21,7 @@
         Inserire l'email di registrazione
     </div>
 
-    <div class="modal-footer" style="margin-top:40px">
+    <div class="modal-footer">
         <button type="submit" class="btn btn-info">Recupera Password</button>
         <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="hideModal()">Chiudi la finestra</button>
 
