--- a/Sediin.Core.WebUi/Areas/TemplateEmail/Views/Configuration/EmailTest.cshtml
+++ b/Sediin.Core.WebUi/Areas/TemplateEmail/Views/Configuration/EmailTest.cshtml
@@ -3,4 +3,10 @@
 </strong>
 <br />
 <br />
-Messaggio di prova per Test Email
+
+<div class="alert alert-success">
+
+    Messaggio di prova per Test Email
+
+</div>
+
