--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
 
 
     <main class="d-flex align-items-center blurEffect">
-        <div class="container mt-3 mb-3">
+        <div class="container">
             @RenderBody()
         </div>
     </main>
