--- a/Sediin.Core.WebUi/Views/Authentication/Register.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Register.cshtml
@@ -1,19 +1,34 @@
 ﻿@model Sediin.Core.WebUi.Models.RegisterViewModel
 
-<ajax-form asp-action="Register" asp-controller="Authentication"
+<ajax-form asp-action="Register"
+           asp-controller="Authentication"
            on-begin="alertWaid()"
            on-success="onRegisterSuccess"
            on-failure="handleError">
 
     <div class="form-horizontal row mt-4">
         <div class="col-md-6 form-group">
-            @Html.LabelFor(model => model.UserName)
+            @Html.Label("Username")
             @Html.TextBoxFor(model => model.UserName)
             @Html.ValidationMessageFor(model => model.UserName)
         </div>
 
         <div class="col-md-6 form-group">
+            @Html.Label("Ruolo")
+            <div>
+                <select data-val="true" data-val-required="Il campo Ruolo è obbligatorio."
+                        class="form-control col-md-12 field-warning"
+                        id="Ruolo" name="Ruolo">
+                    @foreach (var item in Enum.GetValues(typeof(Sediin.Core.Identity.Roles)))
+                    {
+                        <option value="@item">@item</option>
+
+                    }
+                </select>
+                @Html.ValidationMessage("Ruolo")
+            </div>
         </div>
+
 
         <div class="col-md-6 form-group">
             @Html.LabelFor(model => model.Nome)
