--- a/Sediin.Core.WebUi/Areas/TemplateEmail/Views/Authentication/ResetPassword.cshtml
+++ b/Sediin.Core.WebUi/Areas/TemplateEmail/Views/Authentication/ResetPassword.cshtml
@@ -2,6 +2,8 @@
 
 Gentile <strong>@Model.Nome @Model.Cognome</strong>, per cambiare la tua password <a href="@Model.Url">cliccare qui</a>
 <br />
+La sua username è: <strong>@Model.Username</strong>
+<br />
 <br />
 In caso non si apra il link sopra, copiare ed incollare questa url in una nuova pagina del suo browser.
 <br />
