--- a/Sediin.Core.WebUi/Areas/TemplateEmail/Views/Authentication/ConfirmEmail.cshtml
+++ b/Sediin.Core.WebUi/Areas/TemplateEmail/Views/Authentication/ConfirmEmail.cshtml
@@ -3,7 +3,8 @@
 Gentile <strong>@Model.Nome @Model.Cognome</strong>, conferma la tua utenza <a href="@Model.Url">cliccando qui</a>
 
 <br />
-
+La sua username è: <strong>@Model.Username</strong>
+<br />
 <strong>
     Una volta confermata la email, per il primo accesso è neccessario impostare la password andando alla pagin di Login, e cliccare su "Hai dimenticato la password?"
 </strong>
@@ -12,3 +13,10 @@ Gentile <strong>@Model.Nome @Model.Cognome</strong>, conferma la tua utenza <a h
 In caso non si apra il link sopra, copiare ed incollare questa url in una nuova pagina del suo browser.
 <br />
 @Model.Url
+
+
+<script>
+
+
+
+</script>
