--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
     <link href="~/css/validation.css" rel="stylesheet" />
     <link href="~/css/modale.css" rel="stylesheet" />
     <link href="~/css/toastr.css" rel="stylesheet" />
+    <link href="~/css/nav-wizard.css" rel="stylesheet" />
 </head>
 
 <body>
