--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
     <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
     <link href="~/css/validation.css" rel="stylesheet" />
     <link href="~/css/modale.css" rel="stylesheet" />
+    <link href="~/css/toastr.css" rel="stylesheet" />
+    <link href="~/css/nav-wizard.css" rel="stylesheet" />
 
 </head>
 
@@ -45,7 +47,8 @@
 
 
                     <li>
-                        <a class="nav-link" href="https://www.sediin.it" target="_blank">
+                        <a class="nav-link" href="@ragioneSociale.SitoWeb"
+                           target="_blank">
                             <i class="fas fa-home marginMenuIcon"></i>
                             Sito @ragioneSociale.Nome
                         </a>
