--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/NavMenu.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/NavMenu.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Sediin.Core.DataAccess.Entities.Menu>
 @using Microsoft.AspNetCore.Html
+@using Sediin.Core.Identity
 @using Sediin.Core.Identity.Abstract
 @using Sediin.Core.Identity.Repository
 @using Microsoft.Extensions.Configuration
