--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailSettings.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailSettings.cshtml
@@ -73,7 +73,7 @@
         <a class="btn btn-primary w-25" data-ajax="true"
            data-ajax-begin="alertWaid()"
            data-ajax-failure="handleError"
-           data-ajax-success="showModal_NoFooter('Prova Email', data); alertClose()"
+           data-ajax-success="showModal('Prova Email', data); alertClose()"
            href="@Url.Action("EmailTest", "Configuration")">Prova Email</a>
     </div>
 
