--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
@@ -45,7 +45,7 @@ else
                                            asp-ajax="true"
                                            asp-ajax-begin="alertWaid()"
                                            asp-ajax-failure="handleError"
-                                           asp-ajax-success="showModal_NoFooter('Modifica utente', data); alertClose()">
+                                           asp-ajax-success="showModal('Modifica utente', data); alertClose()">
                                             Modifica utente
                                         </a>
 
