--- a/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
@@ -38,7 +38,7 @@
                 <a class="d-block" data-ajax="true"
                    data-ajax-begin="alertWaid()"
                    data-ajax-failure="handleError"
-                   data-ajax-success="showModal_NoFooter('Recupero Password', data); alertClose()"
+                   data-ajax-success="showModal('Recupero Password', data); alertClose()"
                    href="/Authentication/ForgotPassword">
                     <i class="fas fa-key mr-1"></i> Hai dimenticato la password?
                 </a>
@@ -46,7 +46,7 @@
                 <a class="d-block mt-2" data-ajax="true"
                    data-ajax-begin="alertWaid()"
                    data-ajax-failure="handleError"
-                   data-ajax-success="showModal_NoFooter('Crea una nuova utenza', data); alertClose()"
+                   data-ajax-success="showModal('Crea una nuova utenza', data); alertClose()"
                    href="/Authentication/Register">
                     <i class="fa fa-user-plus mr-1"></i> Crea una nuova utenza
                 </a>
