--- a/Sediin.Core.WebUi/Views/_ViewImports.cshtml
+++ b/Sediin.Core.WebUi/Views/_ViewImports.cshtml
@@ -10,4 +10,5 @@
 @using Sediin.Core.Mvc.Helpers.TagHelpers
 @addTagHelper *, Sediin.Core.Mvc.Helpers
 
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@* @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+ *@
