--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailTest.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailTest.cshtml
@@ -22,5 +22,5 @@
 </ajax-form>
 
 @{
-    Html.RenderPartial("_ValidationScriptsPartial");
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
