--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ChangePassword.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ChangePassword.cshtml
@@ -36,7 +36,7 @@
 </ajax-form>
 
 @{
-    Html.RenderPartial("_ValidationScriptsPartial");
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
 
 <script>
