--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
@@ -57,6 +57,5 @@
 
 
 @{
-    Html.RenderPartial("_ValidationScriptsPartial");
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
-
