--- a/Sediin.Core.WebUi/Areas/Backend/Views/Wizard/Index.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Wizard/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Sediin.Core.Mvc.Helpers.TagHelpers
 @addTagHelper *, Sediin.Core.Mvc.Helpers
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 
 <wizard id="mywizard" asp-target="contentDiv" asp-method="POST"
         asp-loading-text="Sto caricando i dati..."
@@ -11,8 +12,8 @@
         on-complete="toastSuccess('Chiamata finita');">
     <li data-url="@Url.Action("Step1", "Wizard")">Dati Piano</li>
     <li data-url="@Url.Action("Step2", "Wizard", new { id = 3, nome = "aaa" })">Beneficiari</li>
-    <li data-url="@Url.Action("Step3", "Wizard")">Progetti</li>
-    <li data-url="@Url.Action("Step4", "Wizard")">Voci Spesa</li>
+    <li data-url="@Url.Action("Step3", "Wizard")" data-require-validation="true">Progetti</li>
+    <li data-url="@Url.Action("Step4", "Wizard")" data-disabled="true">Voci Spesa</li>
     <li data-url="@Url.Action("Step5", "Wizard")">Ammissione</li>
 </wizard>
 
@@ -23,7 +24,6 @@
 <button style="margin-top:100px" onclick="w()">set manuale view index 3</button>
 
 <script>
-    alertWaid()
 
 function w()
 {
