--- a/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
@@ -28,6 +28,6 @@
 </ajax-form>
 
 @{
-    Html.RenderPartial("_ValidationScriptsPartial");
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
 
