--- a/Sediin.Core.WebUi/Views/Authentication/Register.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Register.cshtml
@@ -64,7 +64,9 @@
 
 </ajax-form>
 
-@Html.Partial("_ValidationScriptsPartial")
+@{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 
 <script>
     function onRegisterSuccess(data) {
