--- a/Sediin.Core.WebUi/Areas/Backend/Views/Wizard/Index.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Wizard/Index.cshtml
@@ -13,7 +13,7 @@
     <li data-url="@Url.Action("Step1", "Wizard")" data-require-validation="false">Dati Piano</li>
     <li data-url="@Url.Action("Step2", "Wizard", new { id = 3, nome = "aaa" })" data-require-validation="true">Beneficiari</li>
     <li data-url="@Url.Action("Step3", "Wizard")" data-require-validation="true">Progetti</li>
-    <li data-url="@Url.Action("Step4", "Wizard")" data-disabled="false">Voci Spesa</li>
+    <li data-url="@Url.Action("Step4", "Wizard")" data-disabled="true">Voci Spesa</li>
     <li data-url="@Url.Action("Step5", "Wizard")">Ammissione</li>
 </wizard>
 
